# reproin-namer

./: .codespellrc  .gitignore  00_dcm-rewrite-from-xlsx.py  01_dcm-bids.sh  7T-LunaSPA_ReproIn-SeqName.xlsx  Flywheel_BIDS_Study_Design.csv  LICENSE  Makefile  ReproIn-creator.xlsx  bidsignore  docs  pyproject.toml  readme.md  requirements.txt  seqdiff.R  setup_env.bash
entity_ux/: Makefile  bids-table_ver-1.10.0dev.json  index.html  make_json.py  requirements.txt
src/reproin_namer/: __init__.py
txt/: input-diff.txt  input-diff2.txt  input-orig.txt  input-repoin.txt  input-reproin.txt  output-filelist.txt  validate.txt
