[project]
name = "reproin-namer"
version = "0.1.20240605"
description = "ReproIn UI for bidsschematools and DICOM protocol name munger"
authors = [
    { name = "WillForan", email = "willforan@gmail.com" }
]
dependencies = [
    "heudiconv>=1.1.3",
    "pydicom>=2.4.4",
    "pandas>=2.2.2",
    # 20240605 -- BEP022=MRSI extension proposal
    "bidsschematools@git+https://github.com/bids-standard/bids-specification@bep022#subdirectory=tools/schemacode",
]
readme = "readme.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reproin_namer"]

[project.scripts]
dicom-rewrite-pname = "reproin_namer:dicom_rewrite_pname"
